- Added explicit Utf8 value for string enums. - Fixed typo in IJsonValue docs.

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Enum.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Enum.tt
@@ -49,6 +49,13 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
         /// {Description}.
         /// </remarks>
         public static readonly <#= TypeDeclaration.DotnetTypeName #> <#= enumValue.AsPropertyName #> = <#= TypeDeclaration.DotnetTypeName #>.Parse(<#= enumValue.SerializedValue #>);
+        /// <summary>
+        /// Gets the <#= enumValue.AsPropertyName #> as a raw UTF8 string.
+        /// </summary>
+        /// <remarks>
+        /// {Description}.
+        /// </remarks>
+        public static ReadOnlySpan<byte> <#= enumValue.AsPropertyName #>Utf8 => <#= enumValue.SerializedValue #>u8;
 <#      }
         else if (enumValue.IsBoolean)
         { #>
