--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Properties.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Properties.tt
@@ -57,6 +57,12 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     /// <summary>
     /// Gets <#= property.DotnetPropertyName #>.
     /// </summary>
+<#      if (property.HasXmlDocumentationRemarks)
+		{ #>
+    /// <remarks>
+    /// <#= property.XmlDocumentationRemarks #>
+    /// </remarks>
+<#      } #>
     public <#= property.Type.FullyQualifiedDotnetTypeName #> <#= property.DotnetPropertyName #>
     {
         get
