- Updated the template to generate an explicit/override pair of indexer properties when the array can be enumerated as a single item type - Regenerated types to use this capability.

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
@@ -92,6 +92,8 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
 <#  } #>
     }
 
+<#  if (!CanEnumerateAsSpecificType)
+    { #>
     /// <inheritdoc/>
     public JsonAny this[int index]
     {
@@ -117,6 +119,67 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
             throw new InvalidOperationException();
         }
     }
+<#  }
+    else
+    { #>
+    /// <inheritdoc/>
+    JsonAny IJsonArray<<#= TypeDeclaration.DotnetTypeName #>>.this[int index]
+    {
+        get
+        {
+            if ((this.backing & Backing.JsonElement) != 0)
+            {
+                return new JsonAny(this.jsonElementBacking[index]);
+            }
+
+            if ((this.backing & Backing.Array) != 0)
+            {
+                try
+                {
+                    return this.arrayBacking[index];
+                }
+                catch (ArgumentOutOfRangeException ex)
+                {
+                    throw new IndexOutOfRangeException(ex.Message, ex);
+                }
+            }
+
+            throw new InvalidOperationException();
+        }
+    }
+
+    /// <summary>
+    /// Gets the item at the given index.
+    /// </summary>
+    /// <param name="index">The index at which to retrieve the item.</param>
+    /// <returns>The item at the given index.</returns>
+    /// <exception cref="IndexOutOfRangeException">The index was outside the bounds of the array.</exception>
+    /// <exception cref="InvalidOperationException">The value is not an array.</exception>
+    public <#= SingleItemsDotnetTypeName #> this[int index]
+    {
+        get
+        {
+            if ((this.backing & Backing.JsonElement) != 0)
+            {
+                return new <#= SingleItemsDotnetTypeName #>(this.jsonElementBacking[index]);
+            }
+
+            if ((this.backing & Backing.Array) != 0)
+            {
+                try
+                {
+                    return this.arrayBacking[index].As<<#= SingleItemsDotnetTypeName #>>();
+                }
+                catch (ArgumentOutOfRangeException ex)
+                {
+                    throw new IndexOutOfRangeException(ex.Message, ex);
+                }
+            }
+
+            throw new InvalidOperationException();
+        }
+    }
+<#  } #>
 
     /// <summary>
     /// Conversion from immutable list.
