--- a/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/CustomAny.Core.tt
+++ b/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/CustomAny.Core.tt
@@ -667,6 +667,20 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
     /// </summary>
     /// <param name="buffer">The buffer from which to parse the value.</param>
     /// <returns>The parsed value.</returns>
+    public static <#= TypeName #> ParseValue(string buffer)
+    {
+#if NET8_0_OR_GREATER
+        return IJsonValue<<#= TypeName #>>.ParseValue(buffer);
+#else
+        return JsonValueHelpers.ParseValue<<#= TypeName #>>(buffer.AsSpan());
+#endif
+    }
+
+    /// <summary>
+    /// Parses a JSON value from a buffer.
+    /// </summary>
+    /// <param name="buffer">The buffer from which to parse the value.</param>
+    /// <returns>The parsed value.</returns>
     public static <#= TypeName #> ParseValue(ReadOnlySpan<char> buffer)
     {
 #if NET8_0_OR_GREATER
