--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.OneOf.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.OneOf.tt
@@ -46,9 +46,9 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     foreach (var oneOf in OneOf)
     { #>,
 
-        Func<<#= oneOf #>, TIn, TOut> match<#= oneOfItemIndex #><#      oneOfItemIndex++;
+        Matcher<<#= oneOf #>, TIn, TOut> match<#= oneOfItemIndex #><#      oneOfItemIndex++;
     } #>,
-        Func<<#= TypeDeclaration.DotnetTypeName #>, TIn, TOut> defaultMatch)
+        Matcher<<#= TypeDeclaration.DotnetTypeName #>, TIn, TOut> defaultMatch)
     {
 <#  oneOfItemIndex = 0;
     foreach (var oneOf in OneOf)
@@ -77,9 +77,9 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     public TOut Match<TOut>(<#  oneOfItemIndex = 0;
     foreach (var oneOf in OneOf)
     { #>
-        Func<<#= oneOf #>, TOut> match<#= oneOfItemIndex #>,<#      oneOfItemIndex++;
+        Matcher<<#= oneOf #>, TOut> match<#= oneOfItemIndex #>,<#      oneOfItemIndex++;
     } #>
-        Func<<#= TypeDeclaration.DotnetTypeName #>, TOut> defaultMatch)
+        Matcher<<#= TypeDeclaration.DotnetTypeName #>, TOut> defaultMatch)
     {
 <#  oneOfItemIndex = 0;
     foreach (var oneOf in OneOf)
