--- a/Solutions/Corvus.Json.CodeGeneration.6/Corvus.Json.CodeGeneration.Draft6/Templates/CodeGenerator.Validate.Format.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.6/Corvus.Json.CodeGeneration.Draft6/Templates/CodeGenerator.Validate.Format.tt
@@ -83,59 +83,59 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     { #>
         return Corvus.Json.Validate.TypeIdnHostName(this, result, level);
 <#  }
-    else if (ConversionOperatorToByte == "implicit")
+    else if (IsJsonByte)
     { #>
         return Corvus.Json.Validate.TypeByte(this, result, level);
 <#  }
-    else if (ConversionOperatorToSByte == "implicit")
+    else if (IsJsonSbyte)
     { #>
         return Corvus.Json.Validate.TypeSByte(this, result, level);
 <#  }
-    else if (ConversionOperatorToInt16 == "implicit")
+    else if (IsJsonInt16)
     { #>
         return Corvus.Json.Validate.TypeInt16(this, result, level);
 <#  }
-    else if (ConversionOperatorToUInt16 == "implicit")
+    else if (IsJsonUInt16)
     { #>
         return Corvus.Json.Validate.TypeUInt16(this, result, level);
 <#  }
-    else if (ConversionOperatorToInt32 == "implicit")
+    else if (IsJsonInt32)
     { #>
         return Corvus.Json.Validate.TypeInt32(this, result, level);
 <#  }
-    else if (ConversionOperatorToUInt32 == "implicit")
+    else if (IsJsonUInt32)
     { #>
         return Corvus.Json.Validate.TypeUInt32(this, result, level);
 <#  }
-    else if (ConversionOperatorToInt64 == "implicit")
+    else if (IsJsonInt64)
     { #>
         return Corvus.Json.Validate.TypeInt64(this, result, level);
 <#  }
-    else if (ConversionOperatorToUInt64 == "implicit")
+    else if (IsJsonUInt64)
     { #>
         return Corvus.Json.Validate.TypeUInt64(this, result, level);
 <#  }
-    else if (ConversionOperatorToInt128 == "implicit")
+    else if (IsJsonInt128)
     { #>
         return Corvus.Json.Validate.TypeInt128(this, result, level);
 <#  }
-    else if (ConversionOperatorToUInt128 == "implicit")
+    else if (IsJsonUInt128)
     { #>
         return Corvus.Json.Validate.TypeUInt128(this, result, level);
 <#  }
-    else if (ConversionOperatorToHalf == "implicit")
+    else if (IsJsonHalf)
     { #>
         return Corvus.Json.Validate.TypeHalf(this, result, level);
 <#  }
-    else if (ConversionOperatorToSingle == "implicit")
+    else if (IsJsonSingle)
     { #>
         return Corvus.Json.Validate.TypeSingle(this, result, level);
 <#  }
-    else if (ConversionOperatorToDouble == "implicit")
+    else if (IsJsonDouble)
     { #>
         return Corvus.Json.Validate.TypeDouble(this, result, level);
 <#  }
-    else if (ConversionOperatorToDecimal == "implicit")
+    else if (IsJsonDecimal)
     { #>
         return Corvus.Json.Validate.TypeDecimal(this, result, level);
 <#  }
