Added specs for implicit conversions derived from a $ref base.
- Fixed bug: incorrect string format type returned for non-string formats
- Fixed bug: `maximum` missing from irreducible keywords list in 2019-09 and 2020-12

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Number.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Number.tt
@@ -663,6 +663,26 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
         return new(new BinaryJsonNumber(value));
     }
 
+#if NET8_0_OR_GREATER
+    /// <summary>
+    /// Conversion from Int128.
+    /// </summary>
+    /// <param name="value">The value to convert.</param>
+    public static <#= ConversionOperatorToInt128 #> operator <#= TypeDeclaration.DotnetTypeName #>(Int128 value)
+    {
+        return new(new BinaryJsonNumber(value));
+    }
+
+    /// <summary>
+    /// Conversion from UInt128.
+    /// </summary>
+    /// <param name="value">The value to convert.</param>
+    public static <#= ConversionOperatorToUInt128 #> operator <#= TypeDeclaration.DotnetTypeName #>(UInt128 value)
+    {
+        return new(new BinaryJsonNumber(value));
+    }
+#endif
+
     /// <summary>
     /// Less than operator.
     /// </summary>
